# carta

./: .carta.json  .gitignore  .mcp.json  CLAUDE.md  LEARNINGS-FROM-TINYFORUM.md  Makefile  README.md  WORKSPACE.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  temp-checklist.md  temp-plan.md  tsconfig.app.json  tsconfig.json  unfolding-successes.md  vite.config.ts  vitest.config.ts
.carta/: MANIFEST.md  workspace.json
.cursor/: about.mdc
.docs/: .last-sync  MANIFEST.md
.temp-docs/: mapv2-parity-checklist.md  the-carta-experiment.md
.temp-investigation/: 01-rf-api-surface.md  02-rf-vs-carta-features.md  03-replacement-effort.md  04-migration-roadmap.md  05-layoutview-replacement.md  06-packaging-and-api.md  07-testing-strategy.md
.todo-tasks/: .gitignore  sidecars-01-bundle-resolver.md  sidecars-02-move-delete-rename.md  sidecars-03-punch-flatten.md  sidecars-04-attach-command.md  sidecars-05-regenerate-manifest.md  sidecars-06-docs-and-ai-skill.md  sidecars.epic.md  task-config.sh
carta_cli/: ai_skill.py  bundle.py  carta.pyz  entries.py  errors.py  frontmatter.py  main.py  manifest-preamble.md  planning.py  ref_convert.py  regenerate_core.py  rewriter.py  workspace.py
cicd/: tag-release.sh  version-bump.sh
examples/: SaaS.carta  carta.carta.json  demo.carta.json  saas.carta  test-scenarios.carta
playwright-report/: index.html
scripts/: create-demo-workspace.sh  start-collab-server.sh  tag-release.sh  version-bump.sh
src/: App.tsx  ContextMenu.tsx  (+3 more)
(+816 files in other folders)
