[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carta-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
carta = "carta_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["carta_cli"]

[tool.hatch.build.targets.wheel.force-include]
"carta_cli/manifest-preamble.md" = "carta_cli/manifest-preamble.md"
"carta_cli/templates" = "carta_cli/templates"
"carta_cli/portable" = "carta_cli/portable"
