[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carta-cli"
version = "0.1.2"
description = "CLI for managing .carta/ specification workspaces"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{ name = "saxonthune" }]
requires-python = ">=3.10"
dependencies = [
    "click",
    "pyyaml",
]

[project.urls]
Repository = "https://github.com/saxonthune/carta"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
carta = "carta_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["carta_cli"]

[tool.hatch.build]
artifacts = ["carta_cli/**/*.md"]
